--- a/llm/templates/llm/contact.html
+++ b/llm/templates/llm/contact.html
@@ -3,8 +3,8 @@
 <section class="bg-gray-900 text-white">
     <div class="container px-6 py-12 mx-auto">
       <div data-aos="fade-right">
-        <p class="font-medium text-pink-400">Contact us</p>
-        <h1 class="mt-2 text-2xl font-semibold md:text-3xl text-pink-400">Get in touch</h1>
+        <p class="font-medium text-green-500">Contact us</p>
+        <h1 class="mt-2 text-2xl font-semibold md:text-3xl text-green-500">Get in touch</h1>
         <p class="mt-3 text-gray-300">Our friendly team would love to hear from you.</p>
       </div>
 
@@ -12,19 +12,19 @@
         <!-- Email -->
         <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-1" data-aos="fade-up">
           <div data-aos="zoom-in">
-            <span class="inline-block p-3 text-pink-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
+            <span class="inline-block p-3 text-green-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
               </svg>
             </span>
             <h2 class="text-base font-medium">Email</h2>
             <p class="text-sm text-gray-300">Our friendly team is here to help.</p>
-            <p class="text-sm text-pink-400">hello@clarity.com</p>
+            <p class="text-sm text-green-500">hello@clarity.com</p>
           </div>
 
           <!-- Office -->
           <div data-aos="zoom-in">
-            <span class="inline-block p-3 text-pink-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
+            <span class="inline-block p-3 text-green-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5" stroke="pink">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
@@ -32,19 +32,19 @@
             </span>
             <h2 class="text-base font-medium">Office</h2>
             <p class="text-sm text-gray-300">Come say hello at our office HQ.</p>
-            <p class="text-sm text-pink-400">Subhash Nagar, Nagpur 440022</p>
+            <p class="text-sm text-green-500">Subhash Nagar, Nagpur 440022</p>
           </div>
 
           <!-- Phone -->
           <div data-aos="zoom-in">
-            <span class="inline-block p-3 text-pink-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
+            <span class="inline-block p-3 text-green-500 rounded-full bg-blue-100/80 dark:bg-gray-800 animate-bounce">
               <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 002.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 01-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 00-1.091-.852H4.5A2.25 2.25 0 002.25 4.5v2.25z" />
               </svg>
             </span>
             <h2 class="text-base font-medium">Phone</h2>
             <p class="text-sm text-gray-300">Mon-Fri from 8am to 5pm.</p>
-            <p class="text-sm text-pink-400">+91 9422722610</p>
+            <p class="text-sm text-green-500">+91 9422722610</p>
           </div>
         </div>
 
@@ -56,6 +56,13 @@
       </div>
     </div>
   </section>
+
+
+
+  <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="KJeh1Qe8UunRiZJmz0_Zd";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
+
 
   <script>
     // Initialize AOS animations
