--- a/llm/templates/llm/llm_home.html
+++ b/llm/templates/llm/llm_home.html
@@ -15,32 +15,32 @@
           <div class="flex flex-col rounded-lg border border-gray-100 px-4 py-8 text-center">
             <dt class="order-last text-lg font-medium text-white">Social Integrations</dt>
 
-            <dd class="text-4xl font-extrabold text-pink-400 md:text-5xl">10+</dd>
+            <dd class="text-4xl font-extrabold text-green-500 md:text-5xl">10+</dd>
           </div>
 
           <div class="flex flex-col rounded-lg border border-gray-100 px-4 py-8 text-center">
             <dt class="order-last text-lg font-medium text-white">Social Media Users Data</dt>
 
-            <dd class="text-4xl font-extrabold text-pink-400 md:text-5xl">3.96 B</dd>
+            <dd class="text-4xl font-extrabold text-green-500 md:text-5xl">3.96 B</dd>
           </div>
 
           <div class="flex flex-col rounded-lg border border-gray-100 px-4 py-8 text-center">
             <dt class="order-last text-lg font-medium text-white">Businesses Seek Social Media Analytics</dt>
 
-            <dd class="text-4xl font-extrabold text-pink-400 md:text-5xl">50%</dd>
+            <dd class="text-4xl font-extrabold text-green-500 md:text-5xl">50%</dd>
           </div>
 
           <div class="flex flex-col rounded-lg border border-gray-100 px-4 py-8 text-center">
             <dt class="order-last text-lg font-medium text-white">Market Size by 2032</dt>
 
-            <dd class="text-4xl font-extrabold text-pink-400 md:text-5xl">63.85 B</dd>
+            <dd class="text-4xl font-extrabold text-green-500 md:text-5xl">63.85 B</dd>
           </div>
         </dl>
       </div>
 
 
     <!-- Heading -->
-    <h1 class="text-4xl md:text-5xl font-extrabold text-center text-pink-400 mb-8">
+    <h1 class="text-4xl md:text-5xl font-extrabold text-center text-green-500 mb-8">
       Why Choose Us ?
     </h1>
 
@@ -63,7 +63,7 @@ Not knowing what’s being said about you is a risk. A risk that can cost you mo
 
     <div class=" dark:bg-gray-900 mt-16">
         <div class="container px-6 py-8 mx-auto">
-            <h1 class="text-2xl font-semibold text-center text-pink-400 capitalize lg:text-3xl dark:text-white">Pricing Plan</h1>
+            <h1 class="text-2xl font-semibold text-center text-green-500 capitalize lg:text-3xl dark:text-white">Pricing Plan</h1>
 
 
 
@@ -77,12 +77,12 @@ Not knowing what’s being said about you is a risk. A risk that can cost you mo
 
                     <p class="font-medium text-white dark:text-white">billed monthly</p>
 
-                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-white capitalize transition-colors duration-300 transform bg-pink-400 rounded-md hover:bg-white hover:text-pink-400 focus:outline-none focus:bg-pink-400 focus:ring focus:ring-pink-300  focus:ring-opacity-80">
+                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-white capitalize transition-colors duration-300 transform bg-green-500 rounded-md hover:bg-white hover:text-green-500 focus:outline-none focus:bg-green-500 focus:ring focus:ring-pink-300  focus:ring-opacity-80">
                         Start Now
                     </button>
                 </div>
 
-                <div class="w-full p-8 space-y-8 text-center bg-pink-400 rounded-lg">
+                <div class="w-full p-8 space-y-8 text-center bg-green-600 rounded-lg">
                     <p class="font-medium text-gray-200 uppercase">Premium</p>
 
                     <h2 class="text-5xl font-bold text-white uppercase dark:text-gray-100">
@@ -91,7 +91,7 @@ Not knowing what’s being said about you is a risk. A risk that can cost you mo
 
                     <p class="font-medium text-gray-200">billed monthly</p>
 
-                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-pink-400 capitalize transition-colors duration-300 transform bg-white rounded-md hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:ring focus:ring-gray-200 focus:ring-opacity-80">
+                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-green-500 capitalize transition-colors duration-300 transform bg-white rounded-md hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:ring focus:ring-gray-200 focus:ring-opacity-80">
                         Start Now
                     </button>
                 </div>
@@ -105,7 +105,7 @@ Not knowing what’s being said about you is a risk. A risk that can cost you mo
 
                     <p class="font-medium text-white dark:text-gray-300">Billed annually</p>
                     <a href="{% url 'llm:contact' %}">
-                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-white capitalize transition-colors duration-300 transform bg-pink-400 rounded-md hover:bg-white hover:text-pink-400 focus:outline-none focus:bg-pink-400 focus:ring focus:ring-pink-300 focus:ring-opacity-80">
+                    <button class="w-full px-4 py-2 mt-10 tracking-wide text-white capitalize transition-colors duration-300 transform bg-green-500 rounded-md hover:bg-white hover:text-green-500 focus:outline-none focus:bg-green-500 focus:ring focus:ring-pink-300 focus:ring-opacity-80">
                         Contact us
                     </button>
                         </a>
@@ -114,5 +114,9 @@ Not knowing what’s being said about you is a risk. A risk that can cost you mo
         </div>
     </div>
   </div>
+
+  <script>
+    (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="KJeh1Qe8UunRiZJmz0_Zd";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+    </script>
 
 {% endblock %}
