--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <!-- Logo and Mobile Menu Button -->
             <div class="flex items-center justify-between">
                 <a href="#">
-                    <img class="w-auto h-11 sm:h-11" src="{% static 'logo.png' %}" alt="Logo">
+                    <img class="w-30 h-40 sm:h-25" src="{% static 'Clarity1.png' %}" alt="Logo">
                 </a>
 
                 <!-- Mobile Menu Button -->
@@ -55,10 +55,10 @@
                             Features
                         </button>
                         <div x-show="isFeaturesOpen" @click.away="isFeaturesOpen = false" class="absolute left-0 w-48 py-2 mt-2 bg-gray-900 rounded-md shadow-lg">
-                            <a href="{% url 'llm:chatbot' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Clarifier</a>
-                            <a href="{% url 'llm:dashboard' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Clarity Dashboard</a>
-                            <a href="{% url 'llm:search' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Clarity Articles</a>
-                            <a href="{% url 'llm:reputation' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Clarity PR</a>
+                            a
+                            <a href="{% url 'llm:dashboard' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Social Dashboard</a>
+                            <a href="{% url 'llm:search' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Social Articles</a>
+                            <a href="{% url 'llm:reputation' %}" class="block px-4 py-2 text-sm text-white hover:bg-gray-700">Social PR</a>
                         </div>
                     </div>
 
@@ -70,8 +70,8 @@
                 <div class="flex items-center mt-4 ml-2 lg:mt-2">
                     <a href="{% url 'llm:profile' %}">
                     <button type="button" class="flex items-center focus:outline-none" aria-label="toggle profile dropdown">
-                        <div class="w-8 h-8 overflow-hidden border-2 border-pink-400 rounded-full">
-                            <img src="{% static 'profile.jpg' %}" class="object-cover w-full h-full" alt="avatar">
+                        <div class="w-8 h-8 overflow-hidden border-2 border-green-500 rounded-full">
+                            <img src="{% static 'profile.png' %}" class="object-cover w-full h-full" alt="avatar">
                         </div>
                     </button>
                     </a>
@@ -93,9 +93,8 @@
         <div class="container px-6 py-8 mx-auto">
             <div class="flex flex-col items-center text-center">
                 <a href="#">
-                    <img class="w-auto h-11 sm:h-11" src="{% static 'logo.png' %}" alt="Company Logo">
-                </a>
-
+                    <img class="w-30 h-40 sm:h-25" src="{% static 'Clarity1.png' %}" alt="Logo">
+                                </a>
                 <div class="flex flex-wrap justify-center mt-6 space-x-4">
                     <a href="#" class="text-sm text-white transition-colors duration-300 hover:text-blue-500 dark:text-gray-300 dark:hover:text-blue-400" aria-label="Home">Home</a>
                     <a href="#" class="text-sm text-white transition-colors duration-300 hover:text-blue-500 dark:text-gray-300 dark:hover:text-blue-400" aria-label="About">About</a>
